--- a/app/templates/registration/logged_out.html
+++ b/app/templates/registration/logged_out.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p>You are logged out!</p>
+<h1>您已經登出!</h1>
 
-<a href="{% url 'login' %}">Relogin</a>
+<a href="{% url 'login' %}" class = button7>重新登入</a>
 
 {% endblock content %}
