--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,103 @@
-* {
-    border: 1px black solid;
-    background-color: aquamarine;
+body {
+    background-color: lightsteelblue;
 }
+
+h1 {
+    background-color: darkgray;
+}
+
+h2 {
+    background-color: darkgrey;
+}
+
+h3 {
+    background-color: honeydew;
+    display: inline-block;
+}
+.button1 {
+    
+    border: lightblue solid;
+    color: steelblue;
+    background-color: whitesmoke;
+    padding: 12px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 10px;
+    font-size: 15px;
+    transition-duration: 0.4s;
+  }
+
+  .button1:hover{
+    /* Animation */
+   border: ghostwhite solid;
+   background-color: mediumaquamarine;
+   color: whitesmoke;
+   box-shadow: 0 10px 11px 0 rgba(0,0,0,0.24), 0 10px 15px 0 rgba(0,0,0,0.19);
+   }
+
+.button7{
+    background-color: lightseagreen;
+    border: none;
+    color: whitesmoke;
+    padding: 7px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 10px;
+    font-size: 14px;
+    transition-duration: 0.4s;
+  }
+
+  .button7:hover{
+    /* Animation */
+   background-color: whitesmoke;
+   color: lightseagreen;
+   box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 7px 10px 0 rgba(0,0,0,0.19);
+ }
+
+ .button8{
+    background-color: lightblue;
+    border: none;
+    color: whitesmoke;
+    padding: 7px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 10px;
+    font-size: 14px;
+    transition-duration: 0.4s;
+  }
+
+  .button8:hover{
+    /* Animation */
+   background-color: whitesmoke;
+   color: steelblue;
+   box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 7px 10px 0 rgba(0,0,0,0.19);
+ }
+
+ .homebutton{
+    background-color: lightblue;
+    border: none;
+    color: whitesmoke;
+    padding: 4px 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 8px;
+    font-size: 30px;
+    transition-duration: 0.4s;
+ }
+
+ .homebutton:hover{
+    /* Animation */
+   background-color: whitesmoke;
+   color: steelblue;
+   box-shadow: 0 10px 11px 0 rgba(0,0,0,0.18), 0 10px 15px 0 rgba(0,0,0,0.19);
+   }
+ 
+   .form{
+    background-color: whitesmoke;
+    text-align: left;
+    display: inline-block;
+   }
