--- a/app/templates/class_lesson.html
+++ b/app/templates/class_lesson.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>班級{{ grade }}年{{ class }}班的教學計畫</h1>
+    <h1>班級: {{ grade }} 年 {{ class }} 班的教學計畫</h1>
 
-{% for lesson in lesson_list %}
-    <li>
-        課程名稱：
-        {{ lesson.course_name }}/任教導師：
-        {{ lesson.teacher }}/
-        <a href= "{% url 'lesson_detail' lesson.id %}" class = button1> 瞭解詳情</a>
-    </li>
-{% endfor %}
+    {% for lesson in lesson_list %}
+        <li>
+            課程名稱：
+            {{ lesson.course_name }}/任教導師：
+            {{ lesson.teacher }}/
+            <a href= "{% url 'lesson_detail' lesson.id %}" class = button3> 瞭解詳情</a>
+            <br>
+            <br>
+        </li>
+    {% endfor %}
+    <br>
+    <br>
+    <a href = "{%  url 'home' %}" class = button8>返回上傳頁面</a>
 
 {% endblock content %}
