--- a/app/templates/registration/logged_out.html
+++ b/app/templates/registration/logged_out.html
@@ -4,5 +4,5 @@
 <h1>您已經登出!</h1>
 
 <a href="{% url 'login' %}" class = button7>重新登入</a>
-
+<a href = "/../../upl" class = button8>返回上傳頁面</a>
 {% endblock content %}
