--- a/app/templates/startpage.html
+++ b/app/templates/startpage.html
@@ -4,10 +4,11 @@
 <h1>教學計畫上傳網站</h1>
 <h2>查找班級之教學計畫：</h2>
 {% for grade in grade_list %}
-    <h3>{{ grade }}年級：</h3>
+    <h3>{{ grade }}年級</h3>
     {% for cls in class_list  %}
-    <a href="{% url 'lesson_class_view' grade cls %}">{{ grade }}Year{{ cls }}class</a>
+    <a href="{% url 'lesson_class_view' grade cls %}" class=button2>{{ grade }}年{{ cls }}班</a>
     {% endfor %}
+    <br>
 {% endfor %}
 <h2>上傳教學計畫：</h2>
 <a href="{% url 'upload_lesson' %}"  class = button1>上傳教學計畫</a>
