--- a/app/templates/class_lesson.html
+++ b/app/templates/class_lesson.html
@@ -1,20 +1,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>班級: {{ grade }} 年 {{ class }} 班的教學計畫</h1>
+    <h1 class="alert alert-warning" role="alert">班級: {{ grade }} 年 {{ class }} 班的教學計畫</h1>
 
+    <div class="list-group">
     {% for lesson in lesson_list %}
-        <li>
-            課程名稱：
-            {{ lesson.course_name }}/任教導師：
-            {{ lesson.teacher }}/
-            <a href= "{% url 'lesson_detail' lesson.id %}" class = button3> 瞭解詳情</a>
-            <br>
-            <br>
+
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="ms-3 me-auto">
+        <div class="fw-bold">課程名稱：{{ lesson.course_name }}</div>
+        任教導師：
+        {{ lesson.teacher }}
+        <br>
+        <br>
+        <a href= "{% url 'lesson_detail' lesson.id %}" class = button3> 瞭解詳情</a>
+
+        </div>
+
         </li>
     {% endfor %}
+    </div>
+
+
     <br>
     <br>
-    <a href = "{%  url 'home' %}" class = button8>返回上傳頁面</a>
+    <a href = "{%  url 'home' %}" class = button8>返回首頁</a>
 
 {% endblock content %}
