--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,17 +7,112 @@
     <link rel="stylesheet" href= "/static/style.css" />
     <!-- -->
     <title>OURWEB</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
 </head>
-<body>
-    <span>
+<body style="background-image: url('https://pic.616pic.com/bg_w1180/00/01/92/4OetT4ULO7.jpg');
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-position: center;
+background-size: cover;">
+
+    {% comment %} <span>
         <a href="{% url 'home' %}" class = homebutton>🏠</a>
         {% if user.is_authenticated %}
             | 登入身分：{{ user.username }} |  <a href="{% url 'logout' %}" class = button7>登出</a>
         {% else %}
             | 登入身分：訪客 |<a href="{% url 'login' %}" class = button7>登入</a>
         {% endif %}                
-    </span>
+    </span> {% endcomment %}
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">大直高中教學計畫上傳網站</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home 🏠</a>
+        </li>
+        
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'upload_lesson' %}">上傳教學計畫</a>
+        </li>
+        
+
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            查看更多
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="https://web.dcsh.tp.edu.tw/">直中校網</a></li>
+            <li><a class="dropdown-item" href="https://site.dcsh.tp.edu.tw/schoolday/">舊版網頁</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="https://www.instagram.com/dzdecrew/">大直第一CREW團隊IG</a></li>
+          </ul>
+        </li>
+        {% comment %} <li class="nav-item">
+          <a class="nav-link disabled">For rent</a>
+        </li> {% endcomment %}
+
+        <li class="nav-item">
+        {% if user.is_authenticated %}
+        哈囉！{{ user.username }} 
+        <a href="{% url 'logout' %}" class="nav-link" >登出</a>
+        {% else %}
+        <a href="{% url 'login' %}" class="nav-link">登入</a>
+        {% endif %}
+        </li>
+
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
+<ul class="nav nav-tabs">
+
+  <li class="nav-item">
+    <a class="nav-link" href="https://www.instagram.com/zeo711_/">Zeo</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="https://www.instagram.com/dzsr24_ju_sheng345/">Chris</a>
+  </li>
+    <li class="nav-item">
+    <a class="nav-link" href="https://www.instagram.com/johnny950414/">Johnny</a>
+  </li>
+    <li class="nav-item">
+    <a class="nav-link" href="https://www.instagram.com/y_chen_91/">Alex</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled">個人IG頁面</a>
+  </li>
+</ul>
+
+    <div class="container" >
+
+    {% comment %} {% if user.is_authenticated %}
+        哈囉！{{ user.username }} <a href="{% url 'logout' %}" class="btn btn-outline-info"
+        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">登出</a>
+    {% else %}
+        <a href="{% url 'login' %}" class="btn btn-outline-info"
+        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">登入</a>
+    {% endif %} {% endcomment %}
+    
+    <div id="main-content">
+
+
     {% block content %}
     {% endblock content %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
 </body>
 </html>
