--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,27 +17,22 @@ background-attachment: fixed;
 background-position: center;
 background-size: cover;">
 
-    {% comment %} <span>
-        <a href="{% url 'home' %}" class = homebutton>🏠</a>
+    {% comment %}
         {% if user.is_authenticated %}
             | 登入身分：{{ user.username }} |  <a href="{% url 'logout' %}" class = button7>登出</a>
         {% else %}
             | 登入身分：訪客 |<a href="{% url 'login' %}" class = button7>登入</a>
         {% endif %}                
-    </span> {% endcomment %}
+    {% endcomment %}
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">大直高中教學計畫上傳網站</a>
+    <a class="navbar-brand" href="{% url 'home' %}">大直高中教學計畫上傳網站</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home 🏠</a>
-        </li>
         
         <li class="nav-item">
           <a class="nav-link" href="{% url 'upload_lesson' %}">上傳教學計畫</a>
@@ -81,6 +76,9 @@ background-size: cover;">
 <ul class="nav nav-tabs">
 
   <li class="nav-item">
+    <a class="nav-link disabled">個人IG頁面</a>
+  </li>
+  <li class="nav-item">
     <a class="nav-link" href="https://www.instagram.com/zeo711_/">Zeo</a>
   </li>
   <li class="nav-item">
@@ -92,9 +90,7 @@ background-size: cover;">
     <li class="nav-item">
     <a class="nav-link" href="https://www.instagram.com/y_chen_91/">Alex</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link disabled">個人IG頁面</a>
-  </li>
+  
 </ul>
 
     <div class="container" >
