登入登出圖片

--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -14,6 +14,9 @@
 
 <div class="card" style="width: 50%; margin: auto;">
     <div class="card-body">
+      <img src="https://1on1.today/blog/wp-content/uploads/2020/01/%E8%9E%A2%E5%B9%95%E5%BF%AB%E7%85%A7-2020-01-23-%E4%B8%8B%E5%8D%888.39.57.png" class="card-img-top" alt="...">
+      <br>
+      <br/>
       <h5 class="card-title">歡迎登入！</h5>
       <h6 class="card-subtitle mb-2 text-muted">登入以享受各種功能！</h6>
       <form action="" method="post">
