--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
 </head>
-<body style="background-image: url('https://pic.616pic.com/bg_w1180/00/01/92/4OetT4ULO7.jpg');
+<body style="background-image: url('../../static/bgp/bg.jpg');
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: center;
