--- a/app/templates/registration/logged_out.html
+++ b/app/templates/registration/logged_out.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <div class="card" style="width: 50%; margin: auto;">
+  <img src="https://pgw.udn.com.tw/gw/photo.php?u=https://uc.udn.com.tw/photo/2018/11/28/99/5591297.png&x=0&y=0&sw=0&sh=0&exp=3600" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">您已登出！</h5>
       <h6 class="card-subtitle mb-2 text-muted">您隨時可以再次登入</h6>
